--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <meta charset="utf-8">
 
-<title>Hello World LAB_1.2</title>
+<title>Hello World LAB_1.5</title>
 
 </head>
 
@@ -17,6 +17,8 @@
 <p>This is a website<br>with <em>br</em> element</p>
 
 <p><strong>This is LAB_1.5 with new commit</strong></p>
+
+<a href="https://www.lnu.edu.ua"> Visit us! We are the best!</a>
 
 </body>
 
