--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   <h1>Hello World</h1>
   <p>This is a website<br>with <em>br</em> element</p>
   <p><strong>This is LAB_1.5 with new commit</strong></p>
-<a href="https://www.lnu.edu.ua">Visit us!</a>
+<a href="https://www.lnu.edu.ua">Visit us! We are the best of the best!</a>
 </body>
 
 </html>
-=
